drawing.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');


.hero-container {
  display: flex;
  width: 100%;
  padding: 4% 2%;
  box-sizing: border-box;
  height: 90vh; 
}

.box {
  flex: 1;
  overflow: hidden;
  transition: .5s;
  margin: 0 2%;
  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
  line-height: 0;
  outline: 2px solid black;
}

.box > img {
  width: 200%;
  height: calc(100% - 10vh);
  object-fit: cover;
  transition: .5s; }

.box > span {
  font-size: 3.8vh;
  display: block;
  text-align: center;
  color: black;
  font-family: 'Orbitron', sans-serif;
  text-transform: uppercase;
  height: 10vh;
  line-height: 2.6; }

.box:hover {
  flex: 1 1 50%; }

.box:hover > img {
  width: 100%;
  height: 100%; }



.wrapper {
	width: 100%;
	max-width: 1150px;
}

div.gallery ul {
	list-style-type: none;
	margin-left: 35px;
}

/* animation */
div.gallery ul li, div.gallery li img {
	-webkit-transition: all 0.1s ease-in-out;
  	-moz-transition: all 0.1s ease-in-out;
  	-o-transition: all 0.1s ease-in-out;
  	transition: all 0.1s ease-in-out;
}

div.gallery ul li {
	position: relative;
	float: left;
	width: 200px;
	height: 200px;
	margin: 5px;
	padding: 5px;
    z-index: 0;
}

/* Make sure z-index is higher on hover */
/* Ensure that hover image overlapped the others */
div.gallery ul li:hover {
	z-index: 5;
}

/* Image is position nicely under li */
div.gallery ul li img {
	position: absolute;
	left: 0;
	top: 0;
	/* border: 1px solid black; */
	/* padding: 5px; */
	width: 200px;
	height: 200px;
	background: black;
	object-fit: cover;
}

div.gallery ul li img:hover {
	width: 270px;
	height: 270px;
	margin-top: -200px;
	margin-left: -200px;
	top: 75%;
	left: 75%;
}

p.attribution {
	font-family: 'Consolas';
	color: #000;
	clear: both;
	text-align: center;
	line-height: 25px;
	padding-top: 30px;
}

p.attribution a {
	color: #4c8d7c;
}

/* Responsive hack */
@media only screen and (min-width: 499px) and (max-width: 1212px) {
	.wrapper {
		width: 500px;
	}
}

@media only screen and (max-width: 498px) {
	.wrapper {
		width: 300px;
	}

	div.gallery ul {
		list-style-type: none;
		margin: 0;
	}
}

